--- a/ss5_table_form/tablebai2.html
+++ b/ss5_table_form/tablebai2.html
@@ -5,15 +5,54 @@
     <title>Title</title>
 </head>
 <body>
-  <img src="//james.codegym.vn/pluginfile.php/1/theme_remui/logo/1675179018/Codegym%20X.png" style="height: 50px">
-  <hr>
-  <h1>Sign In</h1>
-  <input type="text" placeholder="Tên tài khoản/ email" style="width: 250px">
-  <br>
-  <br>
-  <input type="password" placeholder="Mật khẩu" style="width: 250px">
-  <br>
-  <pre><input type="checkbox">Nhớ tên tài khoản    Quên mật khẩu?</pre>
-<button style="width: 250px; background-color: blue; color: white" >Đăng nhập</button>
+<form action="https://www.google.com/" method="get">
+    <table>
+        <tr>
+            <td colspan="4">
+                <img src="//james.codegym.vn/pluginfile.php/1/theme_remui/logo/1675179018/Codegym%20X.png"
+                     style="height: 50px" alt="">
+            </td>
+        </tr>
+        <tr>
+            <td colspan="2">
+                <hr>
+            </td>
+        </tr>
+        <tr>
+            <td colspan="2">
+                <h2>Sign In</h2>
+            </td>
+        </tr>
+        <tr>
+            <td colspan="2">
+                <label>
+                    <input type="text" placeholder="Tên tài khoản/ email" style="width: 300px" name="name">
+                </label>
+            </td>
+        </tr>
+        <tr>
+            <td colspan="2">
+                <label> <input type="password" placeholder="Mật khẩu" style="width: 300px" name="pass"></label>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <label>
+                    <input type="checkbox">
+                </label>Nhớ tên tài khoản
+            </td>
+            <td>
+                <p> Quên mật khẩu?</p>
+            </td>
+        </tr>
+        <tr>
+            <td colspan="2">
+                <button style="width: 300px; background-color: blue; color: white" type="submit" value="Create">Đăng
+                    nhập
+                </button>
+            </td>
+        </tr>
+    </table>
+</form>
 </body>
 </html>
