--- a/ss15_ham2/bai1.html
+++ b/ss15_ham2/bai1.html
@@ -11,17 +11,17 @@
     for (let i = 0; i < str; i++) {
         arr[i] = +prompt("nhập phần tử thứ " + [i]);
     }
-    console.log(arr)
+    console.log(arr);
     function checkNumber(arr) {
         for (let i = 1; i < arr.length; i++) {
-            if (arr[0] < arr[i]) {
-                arr[0] = arr[i]
-                return "OK";
+            if (arr[i] - arr[i - 1] !== 1) {
+                return "NO";
             }
         }
-        return "NO";
+        return "OK";
     }
-    console.log(checkNumber(arr))
+    document.write("Mảng sau khi thêm phần tử: " + arr);
+    document.write("<br> Status: " + checkNumber(arr));
 </script>
 </body>
 </html>
