--- a/ss8_cautrucdieukien1/baitap1.html
+++ b/ss8_cautrucdieukien1/baitap1.html
@@ -9,14 +9,12 @@
     let a = +prompt("Chiều dài cạnh a ");
     let b = +prompt("Cạnh dài cạnh b ");
     let c = +prompt("Cạnh dài cạnh c");
-    if (a + b < c || a + c < b || b + c < a) {
-        alert("Không phải là tam giác");
-    } else if (a === b && b === c) {
-        alert("Là tam giác vuông cân");
-    } else if (a === b !== c || a === c !== b && b === c !== a) {
-        alert("Là tam giác vuông cân");
-    } else {
-        alert("Không phải tam giác vuông cân");
+    if (a < 0 || b < 0 || c < 0) {
+        alert("3 cạnh vừa nhập không phải tam giác");
+    } else if (a === b && (a * a) + (b * b) === (c * c) || a === c && (a * a) + (c * c) === b * b || (b === c) && (b * b) + (c * c) === a * a){
+        alert("3 cạnh vừa nhập là tam giác vuông cân");
+    }else{
+        alert("3 cạnh vừa nhập không phải tam giác vuông cân");
     }
 </script>
 </body>
