--- a/ss10_cautruclap1/baitap1.html
+++ b/ss10_cautruclap1/baitap1.html
@@ -6,9 +6,12 @@
 </head>
 <body>
 <script>
-    for (let i = 0; i <= 2023; i++) {
-       console.log(i )
+    let show = 0;
+    for (let i = 50; i <= 2023; i++) {
+        console.log(i);
+        show += i;
     }
+    document.write(show);
 </script>
 </body>
 </html>
