--- a/ss11_cautruclap2/bai1.html
+++ b/ss11_cautruclap2/bai1.html
@@ -18,7 +18,7 @@
             max = arr[i - 1];
         }
     }
-    document.write(" <br> Mảng lớn thứ 2 là " + max);
+    document.write(" <br> Phần tử lớn thứ 2 là " + max);
 </script>
 </body>
 </html>
