--- a/ss13_mang2/bai1.html
+++ b/ss13_mang2/bai1.html
@@ -11,30 +11,20 @@
     let sum = 0;
     let even = 0;
     let odd = 0;
-    let arr3;
     for (let i = 0; i < str; i++) {
         arr[i] = +prompt("Nhập phần tử thứ " + [i]);
     }
-    let str1 = +prompt("Nhập số lượng phần tử muốn thêm");
-    let arr1 = [];
-    for (let i = 0; i < str1; i++) {
-        arr1[i] = +prompt("Nhập phần tử muốn thêm thứ" + [i]);
+    for (let i = 0; i < arr.length; i++) {
+        sum += arr[i];
     }
-    arr3 = arr.concat(arr1);
-
-    for (let i = 0; i < arr3.length; i++) {
-        sum += arr3[i];
-    }
-    for (let i = 0; i < arr3.length; i++) {
-        if (arr3[i] % 2 === 0) {
-            even += arr3[i];
+    for (let i = 0; i < arr.length; i++) {
+        if (arr[i] % 2 === 0) {
+            even += arr[i];
         } else {
-            odd += arr3[i];
+            odd += arr[i];
         }
     }
-    document.write("Phần tử ban đầu là " + arr)
-    document.write("<br> Phần tử muốn thêm là " + arr1)
-    document.write("<br> Mảng sau khi thêm mới các phần tử là: " + arr3);
+    document.write("Phần tử trong mảng là " + arr)
     document.write(" <br> Tổng các phần tử là " + sum);
     document.write("<br> Tổng các phần tử chẵn " + even);
     document.write("<br> Tổng các phần tử lẻ " + odd);
