--- a/ss13_mang2/bai1.html
+++ b/ss13_mang2/bai1.html
@@ -24,7 +24,7 @@
             odd += arr[i];
         }
     }
-    document.write("Phần tử trong mảng là " + arr)
+    document.write("Phần tử trong mảng là " + arr);
     document.write(" <br> Tổng các phần tử là " + sum);
     document.write("<br> Tổng các phần tử chẵn " + even);
     document.write("<br> Tổng các phần tử lẻ " + odd);
