--- a/ss14_ham1/bai1.html
+++ b/ss14_ham1/bai1.html
@@ -6,10 +6,10 @@
 </head>
 <body>
 <script>
-    let str = +prompt("Nhập số lượng phần tử")
-    let arr = []
+    let str = +prompt("Nhập số lượng phần tử");
+    let arr = [];
     for (let i = 0; i < str; i++) {
-        arr[i] = +prompt("Nhập phần tử thứ " + [i])
+        arr[i] = +prompt("Nhập phần tử thứ " + [i]);
     }
 
     function checkNumber(arr) {
