--- a/ss15_ham2/bai2.html
+++ b/ss15_ham2/bai2.html
@@ -7,9 +7,9 @@
 <body>
 <script>
     function checkTriangle() {
-        let a = +prompt("a")
-        let b = +prompt("b")
-        let c = +prompt("c")
+        let a = +prompt("a");
+        let b = +prompt("b");
+        let c = +prompt("c");
 
         if (a + b < c || a + c < b || b + c < a || a > 0 || b > 0 || c > 0) {
             return "không phải tam giác";
@@ -19,7 +19,7 @@
             return "Là 3 cạnh của tam giác";
         }
     }
-    alert(checkTriangle())
+    alert(checkTriangle());
 </script>
 </body>
 </html>
