--- a/ss11_cautruclap2/bai1.html
+++ b/ss11_cautruclap2/bai1.html
@@ -11,7 +11,8 @@
     let max = [0];
     for (let i = 0; i < str; i++) {
         arr[i] = +prompt("Nhập phần tử thứ " + [i]);
-    }    document.write("Phần tử bạn nhập là: " + arr);
+    }
+    document.write("Phần tử bạn nhập là: " + arr);
     arr.sort();
     for (let i = 1; i < arr.length; i++) {
         if (max < arr[i]) {
