--- a/ss11_cautruclap2/bai2.html
+++ b/ss11_cautruclap2/bai2.html
@@ -12,7 +12,7 @@
     do {
             son = +prompt("Nhập vào tuổi con");
             dad = +prompt("Nhập vào tuổi cha");
-        if (son > (dad - 25)&&isNaN(son)) {
+        if (son > (dad - 25)) {
             alert("Tuổi cha phải lớn hơn tuổi con ít nhất là 25 tuổi");
         } else
             break;
