--- a/ss12_mang1/bai1.html
+++ b/ss12_mang1/bai1.html
@@ -21,9 +21,9 @@
         }
     }
     if (even === odd) {
-        console.log("Mảng sau khi thêm là " + arr + "OK");
+        document.write("Mảng sau khi thêm là " + arr + "OK");
     } else {
-        console.log("Mảng sau khi thêm là " + arr + "NO");
+        document.write("Mảng sau khi thêm là " + arr + "NO");
     }
 </script>
 </body>
