--- a/ss16_OOP/bai.html
+++ b/ss16_OOP/bai.html
@@ -67,9 +67,9 @@
         }
     }
 
-    let account1 = new Account("31", "NGUYEN MINH TUAN", 10000);
-    let account2 = new Account("07", "Nguyen Minh Tuan", 20000);
-    let account3 = new Account("05", "Nguyen Minh A ", 9999);
+    let account1 = new Account("99999999", "NGUYEN MINH TUAN", 10000);
+    let account2 = new Account("88888888", "Nguyen Minh Tuan", 20000);
+    let account3 = new Account("77777777", "Nguyen Minh A ", 9999);
     let accountList = [];
     accountList.push(account1, account2, account3);
     displayAccountList(accountList);
