--- a/ss16_OOP/bai.html
+++ b/ss16_OOP/bai.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-<h1 style="background-color: chocolate;color: white">ABC BANK</h1>
+<h1 style="backgroaund-color: chocolate;color: white">ABC BANK</h1>
 <hr>
 <div id="table"></div>
 <br>
