--- a/case_study/yeucau2/bai1.html
+++ b/case_study/yeucau2/bai1.html
@@ -15,12 +15,13 @@
             alert("Vui lòng nhập lại");
         }
     } while (true);
+    debugger
     for (let i = 1; i <= c; i++) {
         for (let j = 1; j <= i; j++) {
             if (i === 1 || i === c || j === 1 | i === j) {
                 document.write("*");
             } else {
-                document.write("&nbsp&nbsp");
+                document.write("-");
             }
         }
         document.write("<br>");
