--- a/ss15_ham2/bai1.html
+++ b/ss15_ham2/bai1.html
@@ -23,7 +23,7 @@
     }
 
     document.write("Mảng sau khi thêm phần tử: " + arr);
-    document.write("<br> Status: " + checkNumber(arr));
+    alert(checkNumber(arr))
 </script>
 </body>
 </html>
